feat: bump from 1.1.0 to 1.2.0